--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-6">
-                    <h1 id="header-title">Todo App</h1>
+                    <h1 id="header-title">Listerr</h1>
                 </div>
                 <div class="col-md-6 align-self-center">
                     <input type="text" class="form-control" id="filter" placeholder="Search Items...">
